k8s/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nextjs
  labels:
    app: nextjs
spec:
  imagePullSecrets:
    - name: github-registry
  containers:
    - name: site
      image: ghcr.io/afope/devops-project:main
      resources:
        limits:
          memory: "200Mi"
      requests:
        memory: "100Mi"
      ports:
        - containerPort:3000
